...
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                app:errorEnabled="true"
                tools:hint="@string/login_server_url_form_modular_hint">

                <AutoCompleteTextView
                    android:id="@+id/loginServerUrlFormHomeServerUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hs_url"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:maxLines="1" />
...
                android:layout_marginTop="6dp"
                android:gravity="start"
                android:textColor="?vctr_content_secondary"
                tools:text="@string/login_server_url_form_common_notice" />

            <Button
                android:id="@+id/loginServerUrlFormSubmit"
                style="@style/Widget.Vector.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="22dp"
                android:text="@string/login_continue" />
...
