...
        app:layout_constraintGuide_percent="@dimen/ftue_auth_gutter_end_percent" />

    <Space
        android:id="@+id/loginSplashButtonsSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/loginSplashSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carouselIndicator" />

    <Button
...
