...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bootstrapIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/bottom_sheet_setup_secure_backup_title" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottomSheetFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bootstrapTitleText" />

...
