...
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/roomListContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
